<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/padding_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/IndespensaHeading2"
            android:textColor="@color/secondary"
            android:text="@string/recipe_filters"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/IndespensaHeading4"
            android:text="@string/form_hint_level"
            android:layout_marginTop="@dimen/margin_2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dialog_recipe_filters_level_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/tag_filter"
            tools:itemCount="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/IndespensaHeading4"
            android:text="@string/form_hint_avalilability"
            android:layout_marginTop="@dimen/margin_2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dialog_recipe_filters_availability_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/tag_filter"
            tools:itemCount="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/IndespensaHeading4"
            android:text="@string/form_hint_preparation_time"
            android:layout_marginTop="@dimen/margin_2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dialog_recipe_filters_preparation_time_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/tag_filter"
            tools:itemCount="1"/>

        <Button
            android:id="@+id/dialog_recipe_filters_apply_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary_background"
            app:backgroundTint="@null"
            android:text="@string/cta_apply"
            android:fontFamily="@font/montserrat"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:enabled="true"
            android:layout_marginTop="@dimen/margin_6"/>

        <Button
            android:id="@+id/dialog_recipe_filters_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1"
            android:background="@drawable/button_terciary_background"
            android:backgroundTint="@color/transparent"
            android:enabled="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/cta_cancel"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
