<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LandingFragment"
    android:backgroundTint="@color/white">
    <ImageView
        android:id="@+id/landing_logo"
        android:layout_width="@dimen/logo_width_large"
        android:layout_height="@dimen/logo_height_large"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>
    <TextView
        android:id="@+id/landing_slogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/landing_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="64dp"
        android:text="@string/app_slogan"
        android:textAlignment="center"
        android:theme="@style/IndespensaHeading1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/landing_slogan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/landing_main_button"
        android:layout_marginHorizontal="80dp">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/landing_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/landing_dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            app:dotsSize="@dimen/dots_size"
            app:dotsStrokeColor="@color/gray"/>
    </LinearLayout>
    <Button
        android:id="@+id/landing_main_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/IndespensaButton.primary"
        android:text="@string/lading_cta_signup"
        app:layout_constraintEnd_toEndOf="@id/landing_second_button"
        app:layout_constraintStart_toStartOf="@id/landing_second_button"
        app:layout_constraintBottom_toTopOf="@id/landing_second_button"
        android:layout_marginBottom="@dimen/margin_2"/>
    <Button
        android:id="@+id/landing_second_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/IndespensaButton.secondary"
        android:text="@string/lading_cta_signup_business"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/landing_login_cta"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:layout_marginBottom="56dp"/>

    <LinearLayout
        android:id="@+id/landing_login_cta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="56dp"
        android:layout_marginStart="@dimen/margin_8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/IndespensaText"
            android:text="@string/landing_request_login_cta"/>
        <TextView
            android:id="@+id/landing_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/IndespensaHeading4"
            android:layout_marginStart="@dimen/margin_1"
            android:textColor="@color/secondary"
            android:text="@string/landing_request_login"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>